# lh2_on_rp2040

./: .gitignore  2crossing_beams.py  CLAUDE.md  README.md  crossing_beams.py  edu_cbeams.py  for_calibration.py  pyqtgraph_drone_3d.py  readme.txt
.claude/rules/: firmware.md  logview_debug.md  scale_calibration_bug.md  solve3d_rotation.md  utils.md  website.md
2026_LBEES/: beta_of_angle_calculator.py
angle_lib/: angle.py  angle_decoder.py
calibration/: README.md
calibration/calibration_lib/: lighthouse_sweep_angle_reader.py  lighthouse_system_scaler.py  param_io.py
clean_positioning/config/: homography_2d_bs10_robust.json  homography_2d_bs4_robust.json  lighthouse_geometry.json  lighthouse_geometry_chosen.json  origin_2d_maps.json  origin_angles.json  sensors_layout.json
clean_positioning/firmware/: main_clean_csv.c
clean_positioning/tools/: calibrate_homography_2d.py  calibrate_homography_2d_robust.py  capture_origin_angles.py  check_current_against_calibration.py  check_pnp_solutions.py  check_sweep_swap_pnp.py  estimate_2d_maps_from_origin.py  estimate_lighthouse_geometry.py  estimate_lighthouse_geometry_choose.py  lh2_2d_common.py  lh2_reader.py  live_homography_2d.py  live_homography_2d_robust.py  live_relative_2d.py  live_triangulation_2d.py  raw_pico_logger.py
docs/: bs_pose_editor.html  crossing_beams_algo_comparison.md  index.html  lh_positions.html  logview.html
firmware/lh2_on_rp2040/: .gitignore
firmware/lh2_on_rp2040/src/lh2/: CMakeLists.txt  lh2.c  lh2.h  lh2_decoder.h
firmware/lh2_on_rp2040/test/: CMakeLists.txt
lbees/2indoor_ubuntu/: compute_3d_coordinates.py
lbees/indoor/: 4sensors.py  4triangulate.py  README.md  angle3.py  angle4-2.py  angle4.py  calibrate3.py  calibrate4-2.py  calibrate4.py  calibrate5-2.py  calibrate5.py  calibration_history.txt  coefficients.txt  dual_angle.py  filter4sensors.py  history_calibration.txt  sensor_raw.py  triangulate.py
my_positioning/: lh2_analyze_v2.py  lh2_csv_reader.py  lh2_filtered_reader.py  lh2_fit_v2.py  lh2_live_position_v2.py  lh2_model_v2.json
my_positioning/data_clean/: v2_depth_center.csv  v2_depth_far.csv  v2_depth_near.csv  v2_horizontal_center.csv  v2_horizontal_left.csv  v2_horizontal_right.csv
positioningv10/: README.md
positioningv10/config/: lighthouse_factory_calibration_bs10.json  lighthouse_geometry_lh2a_families.json  sensors_layout.json  sensors_layout_vertical_head_down.json  test_offsets_one_pose.json  wand_3d_points.json  wand_calibration_poses_3d.json  wand_calibration_poses_3d_lfsr_filtered.json  wand_calibration_poses_3d_lh2a_families.json
positioningv10/tools/: 02_live_angles.py  03_capture_calibration_poses.py  04_estimate_lighthouse_geometry_lh2_guided_ultrafast.py  05_live_position.py  06_validate_geometry.py  08_fit_wand_geometry.py  09_record_wand_wave.py  11_diagnose_wand_pose_data.py  14_filter_bad_pose_bs_groups.py  15_test_lh2_angle_conventions.py  16_diagnose_lfsr_vs_angles.py  20_validate_lh2a_family_capture.py  lh2v10.py
positioningv11/: README.md  README_v11.md
positioningv11/config/: lighthouse_positions.json  wand_calibration_poses_3d_filtered.json  wand_calibration_poses_3d_lfsr.json
positioningv11/docs/: ros2_bridge.md
positioningv11/ros2_ws/src/lh2_ros_bridge/: package.xml  setup.py
positioningv11/ros2_ws/src/lh2_ros_bridge/launch/: lh2_bridge.launch.py
positioningv11/ros2_ws/src/lh2_ros_bridge/lh2_ros_bridge/: __init__.py  common.py  lh2_parser_node.py  lh2_serial_node.py
positioningv11/tools/: 01_live_view.py  04_estimate_lighthouse_geometry_lh2_guided_ultrafast.py  06_validate_geometry.py  08_fit_wand_geometry.py  09_record_wand_wave.py  10_refine_geometry_points_plus_wave.py  18_capture_lh2a_family_poses.py  19_fit_lh2a_family_geometry.py  20_fit_known_lighthouse_positions.py  lh2v10.py
positioningv12/: README.md  colab_anchor_fit.ipynb
positioningv12/config/: anchored_refine_seed_from_pnp_wave.json  anchored_refine_seed_from_pnp_wave_minus_y.json  lighthouse_frame.json  lighthouse_geometry_lh2a_families.json  lighthouse_relative_geometry.json  (+16 more)
positioningv2/: .gitignore  README.md  TODO.md  setup_clean_positioning.ps1
positioningv4/: README.md
positioningv5mocap/: README.md
positioningv6_anglecalib/: README.md
positioningv7_selfcalib_wand/: README.md
rp2350_firmware/: CMakeLists.txt  README.md
rp2350_firmware/scripts/: common.py  generate_lfsr_search_test_vectors copy.py
rp2350_firmware/src/: .gitignore  CMakeLists.txt  bs_poses_cal.h  main.c
rp2350_firmware/src/crossing_beams/: CMakeLists.txt  MAVLINK_TEST_PLAN.md  PLAN.md  a.out  bs_poses_cal.h  compare_results.py  main.c  main_real.c  main_test.c  pico_clean.csv  pico_out.csv  python_out.csv
rp2350_firmware/src/crossing_beams/angle_decoder/: angle_decoder.c  angle_decoder.h
rp2350_firmware/src/crossing_beams/cv/: cv.c  cv.h
rp2350_firmware/src/crossing_beams/lh2/: lh2.c
rp2350_firmware/src/crossing_beams/mavlink/: mavlink.c  mavlink.h
rp2350_firmware/src/crossing_beams/solve3d/: ray_cross.c  ray_cross.h  solve3d.c  solve3d.h
rp2350_firmware/src/crossing_beams/utils/: cycle.txt
rp2350_firmware/src/crossing_beams/utils/docs/: BUILD.md  ENHANCED_ALGORITHM.md  LAB_TUTORIAL.md  RAY_CROSSING_PLAN.md  SYNTHETIC_CAPTURE.md  TEST_PLAN.md
rp2350_firmware/src/crossing_beams/utils/scripts/: plot_geometry.py
rp2350_firmware/src/cv/: cv.c  cv.h
rp2350_firmware/src/lh2/: lh2.h  lh2_checkpoints.h  lh2_decoder.c  ts4231_capture.pio
rp2350_firmware/src/mavlink/: mavlink.c  mavlink.h
rp2350_firmware/src/solve3d/: solve3d.c  solve3d.h
rp2350_firmware/src/utils/docs/: ARCHITECTURE.md  LAB_TUTORIAL.md  SYNTHETIC_CAPTURE.md
rp2350_firmware/src/utils/scripts/: plot_cycle.py  validate_solve3d.py  visualize_solve3d.py
rp2350_firmware/src/yaw/: yaw.c  yaw.h
rp2350_firmware/test/: lh2_lfsr_search_test_vectors.h  test_lh2_determine_polynomial.c  test_lh2_lfsr_index_search.c
scripts/: 01_read_serial.py
src/: main.c
(+308 files in other folders)
