<?xml version="1.0"?>
<package format="3">
  <name>lh2_ros_bridge</name>
  <version>0.1.0</version>
  <description>Minimal ROS2 bridge for LH2P serial data from the RP2040 Lighthouse receiver.</description>
  <maintainer email="elkah@example.com">elkah</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
